added navbar to my project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev-board</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-    
+<body class="w-3/4  mx-auto">
+    <nav class="p-3 rounded-lg  mx-auto border border-black flex justify-between" >
+       <div class="logo flex">
+        <img src="./A5-Dev-Board-0.1.0/assets/logo.png" alt="logo">
+        <h1 class="text-4xl">Dev <span class="font-extrabold" >Board</span></h1>
+       </div>
+       <!-- nav button section  -->
+       <div class="button flex gap-3 mt-2  ">
+        <div class="c-task flex content-center gap-2 bg-[#f5f6ff] px-2">
+            <img class="w-8 h-8" src="./A5-Dev-Board-0.1.0/assets/checkbox.png" alt="checkbox">
+            <p class="font-bold text-2xl">23</p>
+        </div>
+        <div id="color-btn"><img class=" w-8 h-8" src="./A5-Dev-Board-0.1.0/assets/theme-btn.png" alt="themes"></div>
+       </div>
+    </nav>
+    <main>
+
+    </main>
+    <script src="./navbar.js"></script>
 </body>
 </html>
