--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="activity-log  flex flex-col gap-4 content-center bg-white shadow-lg rounded-xl ">
                 <p class="flex text-lg justify-center content-center gap-4 font-bold mt-4 "><img class="h-6 w-6"
                         src="./A5-Dev-Board-0.1.0/assets/activity.png" alt="activity">Activity Log</p>
-                <button id="clear-btn" class="btn btn-style w-1/3  mx-auto ">Clear History</button>
+                <button id="clear-btn" class="btn btn-style w-1/3 px-4  mx-auto ">Clear History</button>
                 <hr>
                 <div  id="activity-container" class="flex flex-col  rounded-xl  gap-1">
                         
